yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zolang-service
spec:
  type: LoadBalancer
  selector:
    app: zolang
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
